using System;

namespace photoniced.essentials.path_tree
{
    public interface INodePrinter
    {
        public static void print_tree(Node tree, string indent, bool last) => throw new NotImplementedException();
    }
}